Fixed letter spacing
Letter spacing was different from figma design, made changes to letter spacing to accomodate this difference.

--- a/frontend/app/components/header/header.module.css
+++ b/frontend/app/components/header/header.module.css
@@ -27,6 +27,7 @@
   padding: 1rem;
   margin-right: 2.2rem;
   transition: color 0.4s ease-out;
+  letter-spacing: 1px;
 }
 
 .nav a:last-child {
